<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardViewSongDetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_6sdp">

        <TextView
            android:id="@+id/textViewGenresCount"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_6sdp"
            android:text="@string/text_time_count"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/textViewGenresCount"
            android:layout_marginEnd="@dimen/_40sdp">

            <TextView
                android:id="@+id/textViewGenresName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:padding="@dimen/_2sdp"
                android:layout_weight="1.5"
                android:text="@string/text_genre_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/textViewTracksCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:padding="@dimen/_2sdp"
                android:text="@string/text_songs"
                android:textColor="@color/grey"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewOptions"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_2sdp"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_more" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>