<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewSongDetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/_4sdp"
    app:cardBackgroundColor="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewSongURI"
            android:layout_width="@dimen/_40sdp"
            android:visibility="visible"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_4sdp"
            android:src="@drawable/ic_uncheck" />

        <LinearLayout
            android:id="@+id/linearLayoutSongView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toEndOf="@+id/imageViewSongURI"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewSongName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="start"
                android:padding="@dimen/_4sdp"
                android:text="@string/text_song_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/textViewAlbumName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:maxLines="1"
                        android:text="@string/text_album_name"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/textViewDot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:layout_marginRight="@dimen/_6sdp"
                        android:text="@string/text_hyphen"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/textViewSongDuration"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:text="@string/text_time_count"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>