<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewSongDetail"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_50sdp"
    app:cardBackgroundColor="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="@dimen/_2sdp"
        android:weightSum="3">

        <TextView
            android:id="@+id/textViewSongCount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/text_time_count"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:id="@+id/linearLayoutSongView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.2"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/textViewSongName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="start|center"
                android:maxLines="1"
                android:text="@string/text_song_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/textViewAlbumName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxLines="1"
                    android:text="@string/text_album_name"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/textViewDot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_weight=".2"
                    android:gravity="end"
                    android:text="@string/text_hyphen"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/textViewSongDuration"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:text="@string/text_time_count"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3">

            <ImageView
                android:id="@+id/imageViewOptions"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:padding="@dimen/_2sdp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_more" />
        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>