<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardViewArtistDetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/_2sdp"
    android:background="@color/transparent"
    android:padding="@dimen/_6sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/textViewSongCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:padding="@dimen/_14sdp"
                android:text="@string/text_time_count"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:id="@+id/linearLayoutArtistView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewArtistName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxLines="1"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/text_artist_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_4sdp">

                    <TextView
                        android:id="@+id/textViewAlbumsCount"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxLines="1"
                        android:text="@string/text_album_count"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/textViewTrackCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:text="@string/text_time_count"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_10sdp" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5">

                <ImageView
                    android:id="@+id/imageViewOptions"
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_more" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>