<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayoutAudioDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewAlbumDup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_album"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ddffffff"
        android:visibility="gone"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPlayList"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarPlayList"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/relativeLayoutSongImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2.5">

            <ImageView
                android:id="@+id/imageViewAlbumFull"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_album" />

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                ads:adSize="BANNER"
                ads:adUnitId="@string/app_banner_ad_id"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutSongView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageViewFav"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_margin="@dimen/_10sdp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_fav_unfill" />

            <TextView
                android:id="@+id/textViewSngName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/text_song_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewAlbName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewSngName"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/text_album_name"
                android:textColor="@color/grey"
                android:textSize="@dimen/_10sdp" />

            <ImageView
                android:id="@+id/imageViewOptions"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/_10sdp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_more" />

            <include
                android:id="@+id/customSeekBar"
                layout="@layout/custom_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewOptions"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp" />

            <include
                android:id="@+id/audioBarDetailView"
                layout="@layout/audio_bar_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customSeekBar"
                android:layout_margin="@dimen/_10sdp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>